--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       <td>TCS</td>
     </tr>
   </table>
-  <h3><a href="C:\Users\Pallavi\Desktop\Web Development\New Project Personal Site\hobbies.html">Hobbies</a></h3>
+  <h3><a href="hobbies.html">Hobbies</a></h3>
 <hr>
-  <h3><a href="C:\Users\Pallavi\Desktop\Web Development\New Project Personal Site\Contactme.html">Contact me</a></h3>
+  <h3><a href="Contactme.html">Contact me</a></h3>
   </p>
 </body>
 
